# touhouML

./: .gitignore  README.md  makefile  touhouML.cabal
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  KeyHandler.hs  Main.hs  README.md  ScreenHandler.hs  WineSetup.sh  base.Dockerfile  example.hs  full.Dockerfile  lutrisInstall.sh  makefile
src/app/: Setup.sh
src/app/touhouML/: Cargo.toml
src/app/touhouML/src/: Lib.rs  main.rs
src/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
