[package]
name = "touhouML"
version = "0.1.0"
authors = ["Matthew Bartlett <endercreeper92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo          = "^0.0.14"
anyhow         = "^1.0"
image          = "0.23.13"
x11-screenshot = "0.2.1"
